Strip unnecessary demo code, rudimentary coloring and layout by branch

--- a/simple_graph.html
+++ b/simple_graph.html
@@ -19,21 +19,13 @@
 
     <form>
         Layout:
-            <label><input type="radio" name="layout" value="force" checked>Force</label>
-            <label><input type="radio" name="layout" value="random">Random</label>
-            <label><input type="radio" name="layout" value="radial">Radial</label>  
-            <label><input type="radio" name="layout" value="line">Line</label>
-            <label><input type="radio" name="layout" value="line_cat">Line by Category</label>
+            <label><input type="radio" name="layout" value="forceLayout" checked>Force</label>  
+            <label><input type="radio" name="layout" value="branchLayout">Branch</label>
     </form>
     <form>
         Color:
-            <label><input type="radio" name="color" value="nocolor" checked>None</label>
-            <label><input type="radio" name="color" value="color_cat">Category</label>
-    </form>
-    <form>
-        Size:
-            <label><input type="radio" name="size" value="nosize" checked>None</label>
-            <label><input type="radio" name="size" value="size_cat">Category</label>
+            <label><input type="radio" name="color" value="noColor" checked>None</label>
+            <label><input type="radio" name="color" value="branchColor">By Branch</label>
     </form>
 
     <!-- 
