--- a/simple_graph.html
+++ b/simple_graph.html
@@ -20,9 +20,21 @@
 </head>
 <body>
 
-    <div id="buttons">
+    <div class="buttons">
         <label><input type="radio" name="layout" value="linearLayout" checked>Linear Layout</label>
         <label><input type="radio" name="layout" value="forceLayout">Force Layout</label>
+    </div>
+    <div class="buttons">
+        <label><input type="radio" name="scale" value="indexScale" checked>Index-based Scale</label>
+        <label><input type="radio" name="scale" value="timeScale">Time-based Scale</label>
+    </div>
+
+    <div id="tooltip" class="hidden">
+        <p><strong><span id="author">Author</span></strong></p>
+        <p><span id="date">Date</span></p>
+        <p><span id="message">Message</span></p>
+        <p>SHA: <span id="sha">SHA</span></p>
+        <p>Branch: <span id="branch">Branch</span></p>
     </div>
 
     <!-- 
