Add title and labels, ignore duplicate commits

--- a/simple_graph.html
+++ b/simple_graph.html
@@ -33,8 +33,8 @@
         <p><strong><span id="author">Author</span></strong></p>
         <p><span id="date">Date</span></p>
         <p><span id="message">Message</span></p>
-        <p>SHA: <span id="sha">SHA</span></p>
-        <p>Branch: <span id="branch">Branch</span></p>
+        <p><strong>Branch: </strong><span id="branch">Branch</span></p>
+        <p><strong>SHA: </strong><span id="sha">SHA</span></p>
     </div>
 
     <!-- 
