Rectangular nodes, highlight and color links

--- a/problem_4.html
+++ b/problem_4.html
@@ -20,6 +20,14 @@
 </head>
 <body>
 
+    <div id="instructions">
+        <p>The <strong>length</strong> of each rectangular node corresponds to the <strong>number of commits</strong> aggregated within it.
+        <br>
+        <strong>Hover</strong> over a node to <strong>highlight</strong> the links to which it's connected.
+        <br>
+        Links coming into the node will appear <span id="greenLink"><strong>green</strong></span> while links leaving the node will appear <span id="redLink"><strong>red</strong></span>.</p>
+    </div>
+
     <div class="buttons">
         <label><input type="radio" name="scale" value="indexScale" checked>Index-based Scale</label>
         <label><input type="radio" name="scale" value="timeScale">Time-based Scale</label>
