Clean up tooltip display

--- a/problem_4.html
+++ b/problem_4.html
@@ -23,9 +23,8 @@
     <div id="instructions">
         <p>The <strong>length</strong> of each rectangular node corresponds to the <strong>number of commits</strong> aggregated within it.
         <br>
-        <strong>Hover</strong> over a node to <strong>highlight</strong> the links to which it's connected.
-        <br>
-        Links coming into the node will appear <span id="greenLink"><strong>green</strong></span> while links leaving the node will appear <span id="redLink"><strong>red</strong></span>.</p>
+        <strong>Hover</strong> over a node to <strong>highlight</strong> links entering the node in <span id="greenLink"><strong>green</strong></span> and links leaving the node in <span id="redLink"><strong>red</strong></span>.
+        <br>You can also hover over an individual link to highlight it.</p>
     </div>
 
     <div class="buttons">
@@ -38,7 +37,6 @@
         <p><span id="date">Date</span></p>
         <p><span id="message">Message</span></p>
         <p><strong>Branch: </strong><span id="branch">Branch</span></p>
-        <p><strong>SHA: </strong><span id="sha">SHA</span></p>
     </div>
 
     <!-- 
