--- a/problem_4.html
+++ b/problem_4.html
@@ -32,11 +32,15 @@
         <label><input type="radio" name="scale" value="timeScale">Time-based Scale</label>
     </div>
 
-    <div id="tooltip" class="hidden">
+    <div id="nodeTooltip" class="hidden">
         <p><strong><span id="author">Author</span></strong></p>
         <p><span id="date">Date</span></p>
         <p><span id="message">Message</span></p>
         <p><strong>Branch: </strong><span id="branch">Branch</span></p>
+    </div>
+
+    <div id="linkTooltip" class="hidden">
+        <p>Connects <strong><span id="source">Author</span></strong> to <strong><span id="target">Author</span></strong></p>
     </div>
 
     <!-- 
