Correct backwards connections

--- a/simple_graph_answer.html
+++ b/simple_graph_answer.html
@@ -47,7 +47,7 @@
     otherwise write; if you know JavaScript, you know CoffeeScript. Thank you    
     for understanding.
     -->
-    <script src="js/simple_graph.js"></script>
+    <script src="js/simple_graph_answer.js"></script>
 
 </body>
 </html>
