--- a/simple_graph_answer.html
+++ b/simple_graph_answer.html
@@ -6,7 +6,7 @@
     <title>Homework 2 Graph</title>
     
     <!-- My custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/simple_graph.css">
+    <link rel="stylesheet" type="text/css" href="css/simple_graph_answer.css">
 
     <!-- Google Web Fonts (Lato) -->
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato:300,400,700'>
